src/main/default/objects/Product2/fields/aforza__Type__c.field-meta.xml
<CustomField>
    <fullName>aforza__Type__c</fullName>
    <description>The type of product.</description>
    <inlineHelpText>The type of product.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Still</fullName>
            </value>
            <value>
                <fullName>Sparkling</fullName>
            </value>
            <value>
                <fullName>Baby</fullName>
                <isActive>false</isActive>
                <label>Baby</label>
            </value>
            <value>
                <fullName>Beer, Wine &amp; Spirits</fullName>
                <isActive>false</isActive>
                <label>Beer, Wine &amp; Spirits</label>
            </value>
            <value>
                <fullName>Bins &amp; Fridges</fullName>
                <isActive>false</isActive>
                <label>Bins &amp; Fridges</label>
            </value>
            <value>
                <fullName>Bread &amp; Bakery</fullName>
                <isActive>false</isActive>
                <label>Bread &amp; Bakery</label>
            </value>
            <value>
                <fullName>Breakfast &amp; Cereal</fullName>
                <isActive>false</isActive>
                <label>Breakfast &amp; Cereal</label>
            </value>
            <value>
                <fullName>Brochures &amp; Handouts</fullName>
                <isActive>false</isActive>
                <label>Brochures &amp; Handouts</label>
            </value>
            <value>
                <fullName>Canned Goods &amp; Soups</fullName>
                <isActive>false</isActive>
                <label>Canned Goods &amp; Soups</label>
            </value>
            <value>
                <fullName>Cleaning Supplies</fullName>
                <isActive>false</isActive>
                <label>Cleaning Supplies</label>
            </value>
            <value>
                <fullName>Condiments/Spices &amp; Bake</fullName>
                <isActive>false</isActive>
                <label>Condiments/Spices &amp; Bake</label>
            </value>
            <value>
                <fullName>Cookies, Snacks &amp; Candy</fullName>
                <isActive>false</isActive>
                <label>Cookies, Snacks &amp; Candy</label>
            </value>
            <value>
                <fullName>Dairy, Eggs &amp; Cheese</fullName>
                <isActive>false</isActive>
                <label>Dairy, Eggs &amp; Cheese</label>
            </value>
            <value>
                <fullName>Deli &amp; Signature Cafe</fullName>
                <isActive>false</isActive>
                <label>Deli &amp; Signature Cafe</label>
            </value>
            <value>
                <fullName>Fixtures</fullName>
                <isActive>false</isActive>
                <label>Fixtures</label>
            </value>
            <value>
                <fullName>Flowers</fullName>
                <isActive>false</isActive>
                <label>Flowers</label>
            </value>
            <value>
                <fullName>Frozen Foods</fullName>
                <isActive>false</isActive>
                <label>Frozen Foods</label>
            </value>
            <value>
                <fullName>Fruits &amp; Vegetables</fullName>
                <isActive>false</isActive>
                <label>Fruits &amp; Vegetables</label>
            </value>
            <value>
                <fullName>Gondolas</fullName>
                <isActive>false</isActive>
                <label>Gondolas</label>
            </value>
            <value>
                <fullName>Grains, Pasta &amp; Sides</fullName>
                <isActive>false</isActive>
                <label>Grains, Pasta &amp; Sides</label>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
                <isActive>false</isActive>
                <label>Health &amp; Beauty</label>
            </value>
            <value>
                <fullName>International Cuisine</fullName>
                <isActive>false</isActive>
                <label>International Cuisine</label>
            </value>
            <value>
                <fullName>Meat &amp; Seafood</fullName>
                <isActive>false</isActive>
                <label>Meat &amp; Seafood</label>
            </value>
            <value>
                <fullName>Paper Products</fullName>
                <isActive>false</isActive>
                <label>Paper Products</label>
            </value>
            <value>
                <fullName>Personal Care &amp; Pharmacy</fullName>
                <isActive>false</isActive>
                <label>Personal Care &amp; Pharmacy</label>
            </value>
            <value>
                <fullName>Pet Care</fullName>
                <isActive>false</isActive>
                <label>Pet Care</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>