src/main/default/objects/Product2/fields/aforza__UOM__c.field-meta.xml
<CustomField>
    <fullName>aforza__UOM__c</fullName>
    <description>Unit of measure.</description>
    <inlineHelpText>Unit of measure.</inlineHelpText>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
                <isActive>false</isActive>
                <label>Pallet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>