src/main/default/objects/Product2/fields/DrinkType__c.field-meta.xml
<CustomField>
    <fullName>DrinkType__c</fullName>
    <label>Drink Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>