src/main/default/objects/Product2/fields/DRS_Gross_Pack__c.field-meta.xml
<CustomField>
    <fullName>DRS_Gross_Pack__c</fullName>
    <label>DRS Gross Pack</label>
    <length>150</length>
    <type>Text</type>
</CustomField>