src/main/default/objects/Product2/fields/DRS_SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>DRS_SKU_Code__c</fullName>
    <label>DRS SKU Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>