src/main/default/objects/Product2/fields/DRSGrossPack__c.field-meta.xml
<CustomField>
    <fullName>DRSGrossPack__c</fullName>
    <label>DRS Gross Pack</label>
    <length>150</length>
    <type>Text</type>
</CustomField>