src/main/default/objects/Product2/fields/DRSGrossUnits__c.field-meta.xml
<CustomField>
    <fullName>DRSGrossUnits__c</fullName>
    <label>DRS Gross Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>