src/main/default/objects/Product2/fields/DRSSKUCode__c.field-meta.xml
<CustomField>
    <fullName>DRSSKUCode__c</fullName>
    <label>DRS SKU Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>