src/main/default/objects/Product2/fields/FocusFiveGroup__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveGroup__c</fullName>
    <inlineHelpText>Please Insert Focus 5 Group Name for this product.</inlineHelpText>
    <label>Focus 5 Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>