src/main/default/objects/Product2/fields/FocusFiveProduct__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pease check this field when the Product should be considered as Focus 5 Product. It will add this product to All DPs Outlet Assets. When the product is unchecked as Focus 5 Product it will be unchecked as Focus 5 Product or deleted if no orders from Outlet Assets.</inlineHelpText>
    <label>Focus 5 Product</label>
    <type>Checkbox</type>
</CustomField>