src/main/default/objects/Product2/fields/HeightDimension__c.field-meta.xml
<CustomField>
    <fullName>HeightDimension__c</fullName>
    <label>Height Dimension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>