src/main/default/objects/Product2/fields/Hight_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Hight_Dimension__c</fullName>
    <label>Hight Dimension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>