src/main/default/objects/Product2/fields/Inner_Pack_Code__c.field-meta.xml
<CustomField>
    <fullName>Inner_Pack_Code__c</fullName>
    <label>Inner Pack Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>