src/main/default/objects/Product2/fields/InnerPackCode__c.field-meta.xml
<CustomField>
    <fullName>InnerPackCode__c</fullName>
    <label>Inner Pack Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>