src/main/default/objects/Product2/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <label>Item Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>