src/main/default/objects/Product2/fields/LengthDimension__c.field-meta.xml
<CustomField>
    <fullName>LengthDimension__c</fullName>
    <label>LengthDimension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>