src/main/default/objects/Product2/fields/LoyaltyProduct__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyProduct__c</fullName>
    <label>Loyalty Product</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>