src/main/default/objects/Product2/fields/Multiple__c.field-meta.xml
<CustomField>
    <fullName>Multiple__c</fullName>
    <label>Multiple</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>