src/main/default/objects/Product2/fields/Off_Sale__c.field-meta.xml
<CustomField>
    <fullName>Off_Sale__c</fullName>
    <label>Off-Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>