src/main/default/objects/Product2/fields/OffSale__c.field-meta.xml
<CustomField>
    <fullName>OffSale__c</fullName>
    <label>Off-Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>