src/main/default/objects/Product2/fields/Outer_Pack_Code__c.field-meta.xml
<CustomField>
    <fullName>Outer_Pack_Code__c</fullName>
    <label>Outer Pack Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>