src/main/default/objects/Product2/fields/OuterPackCode__c.field-meta.xml
<CustomField>
    <fullName>OuterPackCode__c</fullName>
    <label>Outer Pack Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>