src/main/default/objects/Product2/fields/Pack_Price__c.field-meta.xml
<CustomField>
    <fullName>Pack_Price__c</fullName>
    <label>Pack Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>