src/main/default/objects/Product2/fields/PackagingType__c.field-meta.xml
<CustomField>
    <fullName>PackagingType__c</fullName>
    <label>Packaging Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>