src/main/default/objects/Product2/fields/PackPrice__c.field-meta.xml
<CustomField>
    <fullName>PackPrice__c</fullName>
    <label>Pack Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>