src/main/default/objects/Product2/fields/Packs_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Packs_Per_Case__c</fullName>
    <label>Packs Per Case</label>
    <length>4</length>
    <type>Text</type>
</CustomField>