src/main/default/objects/Product2/fields/PackSize__c.field-meta.xml
<CustomField>
    <fullName>PackSize__c</fullName>
    <label>Pack Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>