src/main/default/objects/Product2/fields/PacksPerCase__c.field-meta.xml
<CustomField>
    <fullName>PacksPerCase__c</fullName>
    <label>Packs Per Case</label>
    <length>4</length>
    <type>Text</type>
</CustomField>