src/main/default/objects/Product2/fields/PriceMarkedPack__c.field-meta.xml
<CustomField>
    <fullName>PriceMarkedPack__c</fullName>
    <label>Price Marked Pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>