src/main/default/objects/Product2/fields/ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductStatus__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Off-sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>