src/main/default/objects/Product2/fields/PS_Product_Scotland__c.field-meta.xml
<CustomField>
    <fullName>PS_Product_Scotland__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify a PS product, and used in the Audit filter on mobile</description>
    <inlineHelpText>Used to identify a PS product, and used in the Audit filter on mobile</inlineHelpText>
    <label>PS Product Scotland</label>
    <type>Checkbox</type>
</CustomField>