src/main/default/objects/Product2/fields/PS_Rate_Scotland__c.field-meta.xml
<CustomField>
    <fullName>PS_Rate_Scotland__c</fullName>
    <description>PS Rate Scotland used as a multiplier for Calculating Perfect Store</description>
    <inlineHelpText>PS Rate Scotland used as a multiplier for Calculating Perfect Store</inlineHelpText>
    <label>PS Rate Scotland</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>