src/main/default/objects/Product2/fields/PS_Weight_England__c.field-meta.xml
<CustomField>
    <fullName>PS_Weight_England__c</fullName>
    <description>PS Weightage England used as a multiplier for Calculating Perfect Store</description>
    <inlineHelpText>PS Weightage England used as a multiplier for Calculating Perfect Store</inlineHelpText>
    <label>PS Weight England</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>