src/main/default/objects/Product2/fields/PS_Weight_Scotland__c.field-meta.xml
<CustomField>
    <fullName>PS_Weight_Scotland__c</fullName>
    <description>PS Weightage Scotland used as a multiplier for Calculating Perfect Store</description>
    <inlineHelpText>PS Weightage Scotland used as a multiplier for Calculating Perfect Store</inlineHelpText>
    <label>PS Weight Scotland</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>