src/main/default/objects/Product2/fields/PsCategoryEngland__c.field-meta.xml
<CustomField>
    <fullName>PsCategoryEngland__c</fullName>
    <description>Used to determine which scoring category this product will count towards</description>
    <inlineHelpText>Used to determine which scoring category this product will count towards</inlineHelpText>
    <label>PS Category England</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Visibility</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>