src/main/default/objects/Product2/fields/PsProductEngland__c.field-meta.xml
<CustomField>
    <fullName>PsProductEngland__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify a PS product, and used in the Audit filter on mobile</description>
    <inlineHelpText>Used to identify a PS product, and used in the Audit filter on mobile</inlineHelpText>
    <label>PS Product England</label>
    <type>Checkbox</type>
</CustomField>