src/main/default/objects/Product2/fields/PsRateEngland__c.field-meta.xml
<CustomField>
    <fullName>PsRateEngland__c</fullName>
    <description>PS Rate England used as a multiplier for Calculating Perfect Store</description>
    <inlineHelpText>PS Rate England used as a multiplier for Calculating Perfect Store</inlineHelpText>
    <label>PS Rate England</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>