src/main/default/objects/Product2/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>4</length>
    <type>Text</type>
</CustomField>