src/main/default/objects/Product2/fields/ResourceUrlLink__c.field-meta.xml
<CustomField>
    <fullName>ResourceUrlLink__c</fullName>
    <defaultValue>(&quot;https://sites.google.com/agbarr.co.uk/barrdirect/home&quot;)</defaultValue>
    <description>Link to access the electronic materials to aid selling AG Barr products, and promotions.</description>
    <label>Resource URL Link</label>
    <type>Url</type>
</CustomField>