src/main/default/objects/Product2/fields/Score_weightage__c.field-meta.xml
<CustomField>
    <fullName>Score_weightage__c</fullName>
    <label>Score weightage</label>
    <length>3</length>
    <type>Text</type>
</CustomField>