src/main/default/objects/Product2/fields/ScoreWeightage__c.field-meta.xml
<CustomField>
    <fullName>ScoreWeightage__c</fullName>
    <label>Score Weightage</label>
    <length>3</length>
    <type>Text</type>
</CustomField>