src/main/default/objects/Product2/fields/StockingType__c.field-meta.xml
<CustomField>
    <fullName>StockingType__c</fullName>
    <label>Stocking Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>