src/main/default/objects/Product2/fields/UnitsPerPack__c.field-meta.xml
<CustomField>
    <fullName>UnitsPerPack__c</fullName>
    <label>Units Per Pack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>