src/main/default/objects/Product2/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <label>Weight Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>