src/main/default/objects/Product2/validationRules/ProductSkuAndProductCodeInSync.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductSkuAndProductCodeInSync</fullName>
    <active>true</active>
    <description>Validation rule ensuring that Product code and Product SKU fields are in sync</description>
    <errorConditionFormula>ProductCode !=  StockKeepingUnit</errorConditionFormula>
    <errorDisplayField>StockKeepingUnit</errorDisplayField>
    <errorMessage>Product SKU and Product Code fields must be in sync. Please ensure that both fields contain the same value.</errorMessage>
</ValidationRule>