src/main/default/objects/Product2/listViews/Perfect_Store_V_D_Products_Scotland.listView-meta.xml
<ListView>
    <fullName>Perfect_Store_V_D_Products_Scotland</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PS_Category_Scotland__c</columns>
    <columns>PS_Product_Scotland__c</columns>
    <columns>PS_Rate_Scotland__c</columns>
    <columns>PS_Weight_Scotland__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Perfect Store V&amp;D</value>
    </filters>
    <filters>
        <field>PS_Product_Scotland__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Perfect Store V&amp;D Products Scotland</label>
</ListView>