src/main/default/objects/Product2/listViews/PerfectStoreCEProductsScotland.listView-meta.xml
<ListView>
    <fullName>PerfectStoreCEProductsScotland</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Perfect Store C&amp;E</value>
    </filters>
    <filters>
        <field>PsProductScotland__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Perfect Store C&amp;E Products Scotland</label>
</ListView>