src/main/default/objects/Product2/listViews/PerfectStoreVdProductsEngland.listView-meta.xml
<ListView>
    <fullName>PerfectStoreVdProductsEngland</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PsCategoryEngland__c</columns>
    <columns>PsProductEngland__c</columns>
    <columns>PsRateEngland__c</columns>
    <columns>PsWeightEngland__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Perfect Store V&amp;D</value>
    </filters>
    <filters>
        <field>PsProductEngland__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Perfect Store V&amp;D Products England</label>
</ListView>