src/main/default/objects/Product2/listViews/PerfectStoreVdProductsScotland.listView-meta.xml
<ListView>
    <fullName>PerfectStoreVdProductsScotland</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PsCategoryScotland__c</columns>
    <columns>PsProductScotland__c</columns>
    <columns>PsRateScotland__c</columns>
    <columns>PsWeightScotland__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Perfect Store V&amp;D</value>
    </filters>
    <filters>
        <field>PsProductScotland__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Perfect Store V&amp;D Products Scotland</label>
</ListView>